# ptouch

./: .gitignore  deploy
ptouch/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  autogen.sh  configure.in  version-files
ptouch/maintainer/: make_distn  tag  tidy
ptouch/perl/: ham.pl  label.pl
ptouch/perl/XCI/: HAM.pm
ptouch/src/: Makefile.am  project.h  prototypes.h  ptouch.c  version.c
